--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Frist Web In ITI.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png">
     <title> Frist Web In ITI</title>
   </head>
